# predict_resolve_tally

./: LICENSE  README.md  pyproject.toml
src/predict_resolve_tally/: database.py  main.py
