[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "predict_resolve_tally"
version = "0.0.1"
authors = [
  { name="Jörn Stöhler", email="prt@j.stoehler.eu" },
]
description = "CLI tools to record your private predictions."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "<stub>"
"Bug Tracker" = "<stub>"

[project.scripts]
predict = "predict_resolve_tally.main:predict"
resolve = "predict_resolve_tally.main:resolve"
tally = "predict_resolve_tally.main:tally"

